--- a/src/main/resources/assets/semicon/lang/en_us.lang
+++ b/src/main/resources/assets/semicon/lang/en_us.lang
@@ -2,11 +2,11 @@ tile.andgate.name=And Gate
 tile.orgate.name=Or Gate
 tile.notgate.name=Not Gate
 
-tile.wirebar.name=Wire
-tile.wirecorner.name=Wire
-tile.wiret.name=Wire
-tile.wirecross.name=Wire
-tile.wireall.name=Wire
+tile.wirebar.name=Wire Bar
+tile.wirecorner.name=Wire Corner
+tile.wiret.name=Wire T
+tile.wirecross.name=Wire Cross
+tile.wirefull.name=Wire Full
 
 tile.pin.name=Pin
 tile.clock.name=Clock
